| Bug #7496 | innodb_file_per_table corrupts secondary indexes | ||
|---|---|---|---|
| Submitted: | 22 Dec 2004 22:50 | Modified: | 21 Jan 2005 17:34 |
| Reporter: | Heikki Tuuri | ||
| Status: | Closed | ||
| Category: | Server: InnoDB | Severity: | S1 (Critical) |
| Version: | 4.1 | OS: | Any (All) |
| Assigned to: | Heikki Tuuri | Target Version: | |
[22 Dec 2004 22:50]
Heikki Tuuri
[29 Dec 2004 22:16]
Heikki Tuuri
Fixed in the current 4.1 bk tree. --Heikki
[21 Jan 2005 17:34]
Heikki Tuuri
Fixed in 4.1.9. Unfortunately, we introduced a bug in Windows, but that has an easy workaround: innodb_flush_method=unbuffered --Heikki
